--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "main": "index.js",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -12,6 +12,7 @@
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
+    "install": "^0.13.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
@@ -20,7 +21,7 @@
     "react-native-screens": "~3.4.0",
     "react-native-unimodules": "~0.14.5",
     "react-native-web": "~0.13.12",
-    "tailwind-react-native-classnames": "^1.5.1"
+    "twrnc": "^2.0.0-beta.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
