--- a/app.json
+++ b/app.json
@@ -3,9 +3,12 @@
     "name": "AISO-app",
     "slug": "AISO-app",
     "version": "1.0.0",
-    "assetBundlePatterns": [
-      "**/*"
-    ]
-  },
-  "name": "AISO-app"
+    "assetBundlePatterns": ["**/*"],
+    "icon": "./assets/icon.png",
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#212127"
+    }
+  }
 }
