--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-screens": "~3.4.0",
     "react-native-unimodules": "~0.14.5",
     "react-native-web": "~0.13.12",
+    "tailwindcss": "^2.2.16",
     "twrnc": "^2.0.0-beta.6"
   },
   "devDependencies": {
