--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "main": "index.js",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -8,34 +8,32 @@
     "start": "react-native start"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.0.5",
+    "@expo/metro-config": "^0.2.2",
+    "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.8",
-    "expo": "~42.0.1",
+    "expo": "^42.0.4",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
-    "firebase": "8.2.3",
-    "install": "^0.13.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "~0.63.4",
+    "firebase": "9.1.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-native": "^0.66.0",
     "react-native-dotenv": "^3.2.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
-    "react-native-unimodules": "~0.14.5",
-    "react-native-web": "~0.13.12",
-    "react-redux": "^7.2.5",
-    "redux": "^4.1.1",
-    "redux-thunk": "^2.3.0",
+    "react-native-unimodules": "^0.15.0",
+    "react-native-web": "^0.17.5",
+    "recoil": "^0.4.1",
     "tailwindcss": "^2.2.16",
     "twrnc": "^2.0.0-beta.6"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "expo-cli": "^4.12.0"
+    "expo-cli": "4.12.1"
   },
   "private": true
 }
