--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "web": "expo start --web",
     "start": "react-native start"
   },
+  "engines": {
+    "node": "16.8.x"
+  },
   "dependencies": {
     "@expo/metro-config": "^0.2.2",
     "@react-navigation/bottom-tabs": "^6.0.9",
