--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-unimodules": "^0.15.0",
     "react-native-web": "^0.17.5",
     "recoil": "^0.4.1",
+    "socket.io-client": "^4.3.0",
     "tailwindcss": "^2.2.16",
     "twrnc": "^2.0.0-beta.6"
   },
