Upgraded expo sdk

--- a/app.json
+++ b/app.json
@@ -2,9 +2,10 @@
   "expo": {
     "name": "AISO-app",
     "slug": "AISO-app",
-    "sdkVersion": "42.0.0",
     "version": "1.0.0",
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
