--- a/app.json
+++ b/app.json
@@ -12,6 +12,9 @@
       "resizeMode": "contain",
       "backgroundColor": "#212127"
     },
-    "description": "Controller app for the AISO-bot robot arm"
+    "description": "Controller app for the AISO-bot robot arm",
+    "ios": {
+      "bundleIdentifier": "com.aisoapp"
+    }
   }
 }
